--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,9 @@
     <title>titulo</title>
 </head>
 <body>
-    <h1>Encabezado</h1>
+    
+    <header><h1>Encabezado</h1></header>
+    
     <footer><h3>pie</h3></footer>
 </body>
 </html>
