--- a/index.htm
+++ b/index.htm
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>titulo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <header><h1>Encabezado</h1></header>
-    
+
     <footer><h3>pie</h3></footer>
 </body>
 </html>
