añade div debajo header

--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,7 @@
 <body>
     
     <header><h1>Encabezado</h1></header>
+    <div> Nueva Rama</div>
 
 
 
@@ -23,7 +24,6 @@
 
 
 
-    
     <footer><h3>pie</h3></footer>
 </body>
 </html>
